--- a/w4/w4-w-equivalent-number/package.json
+++ b/w4/w4-w-equivalent-number/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "w4-t",
+  "name": "w4-w-equivalent-number",
   "version": "1.0.0",
   "description": "",
   "main": "problem.js",
@@ -10,8 +10,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chai": "^3.5.0"
-  }
+  "license": "ISC"
 }
