--- a/w03/w3-r-sum-of-numbers/package.json
+++ b/w03/w3-r-sum-of-numbers/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/r-test.js"
   },
   "author": "",
   "license": "ISC",
